--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
     <div class="inner">
       <h1 class="title">Arcana Sanctuary</h1>
       <p class="introduction">A comprehensive Tower of Fantasy <br>athenaeum of guides and knowledge</p>
-      <a routerLink="/about-us" class="white-black">About Us</a> 
+      <a routerLink="/about-us" class="white-black-medium">About Us</a> 
     </div>
   </div>
 </section>
