--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,40 +96,38 @@ main {
     }
 }
 
-.white-black, .white-black-medium {
+.white-black, .white-black-medium, .black-white, .black-white-medium {
     display: inline-block;
+    padding: 8px 16px;
     border-radius: 10px;
+    transition: 0.25s ease;
+
+    &:hover {
+        -webkit-animation: distort-subtle 5s infinite;
+        animation: distort-subtle 5s infinite;
+    }
+}
+
+.white-black, .white-black-medium {
     background-color: white;
     color: black;
-    padding: 8px 16px;
-    font-size: 16px;
-    transition: 0.25s ease;
     border: 2px solid transparent;
 
     &:hover {
         background-color: black;
         border: 2px solid white;
         color: white;
-        -webkit-animation: distort-subtle 5s infinite;
-        animation: distort-subtle 5s infinite;
     }
 }
 
 .black-white, .black-white-medium {
-    display: inline-block;
-    border-radius: 10px;
     background-color: transparent;
-    padding: 8px 16px;
-    font-size: 16px;
-    transition: 0.25s ease;
     border: 2px solid white;
 
     &:hover {
         border: 2px solid transparent;
         background-color: white;
         color: black;
-        -webkit-animation: distort-subtle 5s infinite;
-        animation: distort-subtle 5s infinite;
     }
 }
 
@@ -253,7 +251,7 @@ main {
             }
     
             .card-body {
-                padding: 20px 20px 30px;
+                padding: 20px;
     
                 .card-title {
                     font-size: 20px;
@@ -353,15 +351,28 @@ section.main {
     }
 
     .overview {
+        .page-intro {
+            .titles {
+                .title {
+                    font-size: 32px !important;
+                }
+            }
+        }
+
         .entries {
             grid-template-columns: repeat(1, 1fr);
             justify-items: center;
             gap: 40px;
+            grid-auto-rows: unset;
 
             .entry {
                 max-width: 500px;
                 width: 100%;
             }
         }
+    }
+
+    .white-black-medium, .black-white-medium {
+        font-size: 20px;
     }
 }
