--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -105,7 +105,7 @@
         <a class="info" (click)="setActiveInfo($event)" #info>Trait</a>
         <div class="underline"></div>
       </div>
-      <div class="scroll">
+      <div class="content-info">
         <!-- ADVANCEMENTS-->
         <div class="advancements-table" *ngIf="activeInfo === 'Advancements'">
           <div class="advancements-table-row">
