--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -302,7 +302,7 @@
             }
         }
 
-        .scroll {
+        .content-info {
             margin: 30px 0 0 0;
         }
 
@@ -553,7 +553,7 @@
                 }
             }
 
-            .scroll {
+            .content-info {
                 margin: 32px 0 0 0;
 
                 .attack-wrap {
