Minor dummy text revisions

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,8 +67,7 @@
       <div class="wrapper">
         <div class="quote-block">
           <h3 class="title">Content Handbooks</h3>
-          <p class="quote">“Expertly curated guides that include theory-crafting, explanations and other things I could
-            pull out of my ass for this.“</p>
+          <p class="quote">“Expertly curated guides that include theory-crafting, explanations and how-to's for various game modes and events.“</p>
           <span class="name">- Melly</span>
         </div>
       </div>
@@ -81,9 +80,8 @@
       <div class="wrapper">
         <div class="quote-block">
           <h3 class="title">Indexes</h3>
-          <p class="quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut tortor eget felis
-            maximus ullamcorper.“</p>
-          <span class="name">- Someone</span>
+          <p class="quote">“High-quality indexes that cover the game's simulacras, matrices, and relics in all their glory.“</p>
+          <span class="name">- Melly</span>
         </div>
       </div>
     </div>
@@ -175,9 +173,8 @@
       <div class="wrapper">
         <div class="quote-block">
           <h3 class="title">Healing Guide</h3>
-          <p class="quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut tortor eget felis
-            maximus ullamcorper.“</p>
-          <span class="name">- Someone</span>
+          <p class="quote">“Katherine Isley's Healing Guide covers all the game's intricacies of the Benediction role, aimed at both beginners and veterans.“</p>
+          <span class="name">- Katherine Isley</span>
         </div>
       </div>
     </div>
