Make 404 page responsive, fix Relics Role filter and Matrix Index unresponsive filter. Sanitize Calculator traits text. Change max-age of cache to 60 seconds for testing period.

--- a/src/app/healing-calculator/healing-calculator.component.html
+++ b/src/app/healing-calculator/healing-calculator.component.html
@@ -75,7 +75,7 @@
             <span class="name">{{trait?.name[0]}}</span>
             <!-- {{trait.trait[1].description[0].paragraph}} -->
             <span class="description" *ngFor="let description of trait?.trait[1].description">
-              {{description.paragraph}}
+              <p [innerHTML]="sanitizeHtml(description.paragraph)"></p>
             </span>
           </div>
         </div>
