--- a/src/styles.scss
+++ b/src/styles.scss
@@ -345,7 +345,7 @@ section.main {
             margin: 0 0 40px 0;
         }
         
-        app-index, app-units-index, app-unit-page, app-matrix-page, app-relic-page, app-matrices-index, app-relics-index, app-healing, app-healing-guide, app-healing-teams, app-healing-calculator, app-guides, app-glossary,  app-about-us, app-page-not-found {
+        app-index, app-units-index, app-unit-page, app-matrix-page, app-relic-page, app-matrices-index, app-relics-index, app-healing, app-healing-guide, app-healing-teams, app-healing-calculator, app-guides, app-glossary,  app-about-us {
             margin: 20px 0 40px 0;
         }
     }
