--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -20,6 +20,7 @@
     width: 100%;
     position: relative;
     margin: 40px 0 80px 0;
+    padding: 0 20px;
 
     .e404 {
         display: grid;
@@ -31,7 +32,7 @@
             font-weight: 500;
             margin: unset;
             padding: 0 20px 0 0;
-            border-right: 2px solid white;
+            border-right: 2px solid $white;
         }
 
         .message {
@@ -41,7 +42,7 @@
             height: 100%;
             gap: 12px;
             padding: 0 0 0 20px;
-            border-left: 2px solid white;
+            border-left: 2px solid $white;
 
             span {
                 font-size: 32px;
@@ -85,6 +86,107 @@
                         color: $link;
                     }
                 }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: $laptop) {
+    .main-404 {
+        .e404 {
+            .error-code {
+                font-size: 180px;
+                text-align: right;
+            }
+
+            .message {
+                span {
+                    font-size: 24px;
+                }
+
+                h2 {
+                    font-size: 48px;
+                    text-align: center;
+                }
+            }
+        }
+
+        .lead {
+            gap: 8px;
+
+            img {
+                display: none;
+            }
+
+            span {
+                font-size: 24px;
+                text-align: center;
+            }
+
+            .pages {
+                width: unset;
+                gap: 16px;
+
+                li {
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: $tablet) {
+    .main-404 {
+        gap: 15px;
+
+        .e404 {
+            grid-template-columns: repeat(1, 1fr);
+            border-bottom: 2px solid $white;
+            padding: 0 0 15px 0;
+
+            .error-code {
+                font-size: 120px;
+                text-align: center;
+                padding: unset;
+                border-right: unset;
+            }
+
+            .message {
+                padding: unset;
+                border-left: unset;
+                align-items: center;
+
+                span {
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: $mobile) {
+    .main-404 {
+        .e404 {
+            .error-code {
+                font-size: 80px;
+            }
+
+            .message {
+                h2 {
+                    font-size: 32px;
+                }
+            }
+        }
+
+        .lead {
+            gap: 12px;
+
+            .pages {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                row-gap: 4px;
+                column-gap: 16px;
             }
         }
     }
