Reduce bottom margins on Trait entries

--- a/src/app/healing-calculator/healing-calculator.component.scss
+++ b/src/app/healing-calculator/healing-calculator.component.scss
@@ -83,6 +83,10 @@
                         .name, .description {
                             font-style: italic;
                             text-transform: capitalize;
+                            
+                            p {
+                                margin: unset;
+                            }
                         }
 
                         .name {
