updates to text and images

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,19 +13,19 @@
 <section class="banner">
   <splide [options]="{type: 'loop', perPage: 1, autoplay: true, interval: 5000}" containerClass="splide-fix">
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.webp"/>
+      <img src="assets/backgrounds/banner_background1.webp"/>
     </splide-slide>
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.webp"/>
+      <img src="assets/backgrounds/banner_background2.webp"/>
     </splide-slide>
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.webp"/>
+      <img src="assets/backgrounds/banner_background3.webp"/>
     </splide-slide>
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.webp"/>
+      <img src="assets/backgrounds/banner_background4.webp"/>
     </splide-slide>
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.webp"/>
+      <img src="assets/backgrounds/banner_background5.webp"/>
     </splide-slide>
   </splide>
   <div class="content-container">
@@ -67,8 +67,8 @@
       <div class="wrapper">
         <div class="quote-block">
           <h3 class="title">Content Handbooks</h3>
-          <p class="quote">“Expertly curated guides that include theory-crafting, explanations and how-to's for various game modes and events.“</p>
-          <span class="name">- Melly</span>
+          <p class="quote">Explore our guides with practical tips, explanations, and instructions for different game modes and events.</p>
+
         </div>
       </div>
     </div>
@@ -80,8 +80,7 @@
       <div class="wrapper">
         <div class="quote-block">
           <h3 class="title">Indexes</h3>
-          <p class="quote">“High-quality indexes that cover the game's simulacras, matrices, and relics in all their glory.“</p>
-          <span class="name">- Melly</span>
+          <p class="quote">High-quality indexes that cover the game's simulacras, matrices, and relics with all relevant information about them.</p>
         </div>
       </div>
     </div>
@@ -173,8 +172,8 @@
       <div class="wrapper">
         <div class="quote-block">
           <h3 class="title">Healing Guide</h3>
-          <p class="quote">“Katherine Isley's Healing Guide covers all the game's intricacies of the Benediction role, aimed at both beginners and veterans.“</p>
-          <span class="name">- Katherine Isley</span>
+          <p class="quote">Katherine Isley's Healing Guide covers all the game's intricacies of the Benediction role, aimed at both beginners and veterans.</p>
+
         </div>
       </div>
     </div>
@@ -185,10 +184,8 @@
     <div class="half text">
       <div class="wrapper">
         <div class="quote-block">
-          <h3 class="title">Teams & Calculator</h3>
-          <p class="quote">“No idea if your team is looking right for the job you need? Look no further, it’s all here -
-            in one place.“</p>
-          <span class="name">- Someone</span>
+          <h3 class="title">Support Teams & Calculator</h3>
+          <p class="quote">Example teams for support players and how-to-play them descriptions, together with a healing calculator that can show you how much healing and buffing your support team does.</p>
         </div>
       </div>
     </div>
@@ -291,9 +288,7 @@
       <div class="wrapper">
         <div class="quote-block">
           <h3 class="title">Glossary</h3>
-          <p class="quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut tortor eget felis
-            maximus ullamcorper.“</p>
-          <span class="name">- Someone</span>
+          <p class="quote">A collection of both game-specific and general gaming terminology to help new players learn common terms and abbreviations used on this website as well as in the game.</p>
         </div>
       </div>
     </div>
@@ -311,7 +306,7 @@
         <img src="assets/other/huma-meryl-think.webp" alt="Huma and Meryl Sticker">
       </div>
       <span class="subtitle">
-        Join our community on <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink">Discord</a> and just &#64;Kath
+        Join our community on <a href="https://discord.gg/9RHJMAzMJR" class="hyperlink">Discord</a> and just &#64;Kath
       </span>
     </div>
   </div>
