--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -4,33 +4,32 @@
       <h3 class="title">Index</h3>
       <h4 class="subtitle">Overview</h4>
     </div>
-    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque inventore corporis voluptates perferendis, fugit velit, non ipsam dignissimos dicta sed dolorum neque soluta deserunt magnam. Natus illo magnam iste nesciunt!</p>
   </div>
   <div class="entries">
     <div class="entry" routerLink="/index/units-index">
       <div class="card">
-        <img class="card-img-top" src="" alt="Card image top">
+        <img class="card-img-top" src="assets/backgrounds/index_background1.webp" alt="Card image top">
         <div class="card-body">
-          <h5 class="card-title">Units Index</h5>
-          <p class="card-text">An index dedicated to provide clean, concise, and high-quality information about the units and weapons in Tower of Fantasy. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima vitae qui quidem eveniet aperiam eligendi beatae veritatis nihil esse, reiciendis architecto ducimus dolorum cumque soluta, sequi voluptates eius deserunt natus.</p>
+          <h5 class="card-title">Simulacra Index</h5>
+          <p class="card-text">Information about the weapons in the game.</p>
         </div>
       </div>
     </div>
     <div class="entry" routerLink="/index/matrices-index">
       <div class="card">
-        <img class="card-img-top" src="" alt="Card image top">
+        <img class="card-img-top" src="assets/backgrounds/index_background2.webp" alt="Card image top">
         <div class="card-body">
           <h5 class="card-title">Matrices Index</h5>
-          <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit rerum itaque, nobis dignissimos incidunt delectus consequatur magni, voluptates excepturi, ducimus harum. Ducimus sunt architecto tempore eligendi incidunt! Similique, sed molestiae?</p>
+          <p class="card-text">Matrix chips that can be equipped on weapons.</p>
         </div>
       </div>
     </div>
     <div class="entry" routerLink="/index/relics-index">
       <div class="card">
-        <img class="card-img-top" src="" alt="Card image top">
+        <img class="card-img-top" src="assets/backgrounds/index_background3.webp" alt="Card image top">
         <div class="card-body">
           <h5 class="card-title">Relics Index</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis, obcaecati natus repudiandae ab dolorum modi, pariatur alias amet autem et recusandae mollitia nostrum labore architecto officiis quaerat consequatur expedita!</p>
+          <p class="card-text">Tools that assist the Wanderer in combat and exploration.</p>
         </div>
       </div>
     </div>
